--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Pawel Zubkiewicz",
   "license": "MIT",
   "devDependencies": {
+    "aws-sdk-mock": "^4.4.0",
     "eslint": "^5.15.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
@@ -17,6 +18,6 @@
     "lambda-tester": "^3.5.0"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.19.0"
   }
 }
