--- a/serverless.yml
+++ b/serverless.yml
@@ -6,7 +6,7 @@ provider:
   runtime: nodejs8.10
   profile: ${self:custom.myProfile.${self:custom.myStage}}
   region: ${self:custom.myRegion.${self:custom.myStage}}
-
+  
 custom:
   myStage: ${opt:stage, self:provider.stage}
   myProfile:
@@ -16,9 +16,42 @@ custom:
     dev: eu-west-1
     prod: eu-west-1
 
+  snsFanoutTopicName: fanout-topic
+  snsFanoutTopicArn:
+    Fn::Join:
+      - ''
+      - - 'arn:aws:sns:'
+        - Ref: AWS::Region
+        - ":"
+        - Ref: AWS::AccountId
+        - ":"
+        - Fn::GetAtt:
+          - snsFanoutTopic
+          - TopicName
+
 functions:
   checkPackage:
     handler: src/checkPackage/lambda.main
     description: Checks package info on website 
     memorySize: 128
     timeout: 25
+    events:
+      - sns: 
+          arn: ${self:custom.snsFanoutTopicArn}
+          topicName:  ${self:custom.snsFanoutTopicName}
+  
+  activePackages:
+    handler: src/activePackages/lambda.main
+    description: Fetch list of packages from DB and send them to SNS 
+    memorySize: 128
+    timeout: 5
+    environment:
+       snsFanoutTopicArn: ${self:custom.snsFanoutTopicArn}
+
+resources:
+  Resources:
+    snsFanoutTopic:
+      Type: AWS::SNS::Topic
+      Properties:
+        DisplayName: "SledzPaczke fan-out topic"
+        TopicName: ${self:custom.snsFanoutTopicName}
