--- a/serverless.yml
+++ b/serverless.yml
@@ -6,6 +6,12 @@ provider:
   runtime: nodejs8.10
   profile: ${self:custom.myProfile.${self:custom.myStage}}
   region: ${self:custom.myRegion.${self:custom.myStage}}
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - "sns:Publish"
+      Resource:
+        - Ref: snsFanoutTopic
   
 custom:
   myStage: ${opt:stage, self:provider.stage}
@@ -17,17 +23,6 @@ custom:
     prod: eu-west-1
 
   snsFanoutTopicName: fanout-topic
-  snsFanoutTopicArn:
-    Fn::Join:
-      - ''
-      - - 'arn:aws:sns:'
-        - Ref: AWS::Region
-        - ":"
-        - Ref: AWS::AccountId
-        - ":"
-        - Fn::GetAtt:
-          - snsFanoutTopic
-          - TopicName
 
 functions:
   checkPackage:
@@ -37,16 +32,16 @@ functions:
     timeout: 25
     events:
       - sns: 
-          arn: ${self:custom.snsFanoutTopicArn}
+          arn: !Ref snsFanoutTopic
           topicName:  ${self:custom.snsFanoutTopicName}
   
   activePackages:
     handler: src/activePackages/lambda.main
-    description: Fetch list of packages from DB and send them to SNS 
+    description: Fetch list of packages from DB and send them to SNS
     memorySize: 128
     timeout: 5
     environment:
-       snsFanoutTopicArn: ${self:custom.snsFanoutTopicArn}
+      snsFanoutTopicArn: !Ref snsFanoutTopic
 
 resources:
   Resources:
