--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Pawel Zubkiewicz",
   "license": "MIT",
   "devDependencies": {
+    "aws-sdk": "^2.490.0",
     "eslint": "^5.15.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
