przejście na node.js 12

--- a/serverless.yml
+++ b/serverless.yml
@@ -3,7 +3,7 @@ service: sledz-paczke
 provider:
   name: aws
   stage: dev
-  runtime: nodejs8.10
+  runtime: nodejs12.x
   profile: ${self:custom.myProfile.${self:custom.myStage}}
   region: ${self:custom.myRegion.${self:custom.myStage}}
   iamRoleStatements:
